# src/RequestProjectionStreamPosition.php
@@ -35,8 +35,8 @@ use Chronhub\Storm\Contracts\Projector\ProjectorManager;
             new Response(ref: '#/components/responses/400', response: 400),
             new Response(ref: '#/components/responses/401', response: 401),
             new Response(ref: '#/components/responses/403', response: 403),
+            new Response(ref: '#/components/responses/ProjectionNotFound', response: 404),
             new Response(ref: '#/components/responses/500', response: 500),
-            new Response(response: 404, description: 'Projection not found', content: new JsonContent(ref: '#/components/schemas/Error')),
         ],
     ),
 ]
